Add ability to run decompiled applications in an emulator
Implement an Appetize.io integration to allow users to run decompiled APKs in an inline Android emulator.
